seedboxk8s/applications/cops/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cops
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cops
  template:
    metadata:
      labels:
        app: cops
    spec:
      containers:
        - image: linuxserver/cops
          name: cops
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: cops-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: cops-config-pvc
          persistentVolumeClaim:
            claimName: cops-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
