seedboxk8s/applications/cops/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cops
  namespace: tortuga
spec:
  replicas: 1
  serviceName: cops
  selector:
    matchLabels:
      app.kubernetes.io/name: cops
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cops
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-cops/releases
        - image: ghcr.io/linuxserver/cops:3.8.2-ls279
          name: cops
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /config
              name: cops-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: cops-config-pvc
          persistentVolumeClaim:
            claimName: cops-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
