seedboxk8s/applications/cops/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cops
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: cops
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
