seedboxk8s/applications/cops/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cops
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: COPS
    gethomepage.dev/group: Books
    gethomepage.dev/icon: mdi-bookshelf
    gethomepage.dev/href: https://cops.${productionClusterFqdn}

spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`cops.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: cops
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
